--- a/css/home.css
+++ b/css/home.css
@@ -45,9 +45,7 @@ header nav a {
     font-size: 20px;
     
 }
-header nav a:hover{
-    
-}
+
 section a{
     text-decoration: none;
     color: black;
@@ -128,7 +126,7 @@ footer {
     margin-bottom: 0;
     align-items: center;
     position: relative;
-    
+    bottom: 0;
 }
 
 .footer_logo{
@@ -180,7 +178,7 @@ footer {
     bottom: 0;
 }
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 1500px){
     .hero {
         flex-direction: column;
         justify-content: center;
@@ -194,12 +192,40 @@ footer {
         display: none;
     }
     footer{
+        display: none;
+    }
+    .card{
+        margin-bottom: 100px;
+        max-height: fit-content;
+        
+    }
+}
+
+@media screen and (max-width: 683px) {
+    *{
+        box-sizing: border-box;
+    }
+    header{
+        position: absolute;
+    }
+    header nav a{
+        font-size: 14px;
+        color: white;
+    }
+    .hero{
+        width: 100%;
+        justify-content: center;
+    }
+    .hero-text{
+        font-size: 30px;
+        width: 100%;
+    }
+    header nav{
         position: fixed;
         bottom: 0;
-        left: 0;
-        height: 150px;
-    }
-    .nota{
-        position: fixed;
+        background-color: black;
+        width: 100%;
+        text-align: center;
+        padding: 20px;
     }
 }
